<resources>
    <string name="app_name">INCI2019</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_search">Search</string>
    <string name="title_activity_checkout">CheckoutActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_web">Web</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_fragment">FragmentActivity</string>
</resources>
