<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_shopping_cart_black"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_web"
        android:icon="@drawable/ic_explore_black"
        android:title="@string/action_web"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_face_blackdp"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom" />
</menu>